--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                         <div><a class="button" href="https://www.youtube.com/@bkupdatestudy2343/playlists" target="_blank">English : Bk Update Study</a></div>
                         <div><a class="button" href="https://www.youtube.com/@MahmudulParvez/playlists" target="_blank">Math : Mahmudul Parvez</a></div>
                         <div><a class="button" href="https://biddabari.com/student/course-contents/1234/11-20th-Grade-Gold-Live-Batch-11" target="_blank">BIDDABARI</a></div>
-					<div><a class="button" href="https://learnengwithshahan.com/student/enrolled/courses" target="_blank">Learn with Shahan</a></div>
+					    <div><a class="button" href="https://learnengwithshahan.com/student/enrolled/courses" target="_blank">Learn with Shahan</a></div>
+					    <div><a class="button" href="https://docs.google.com/spreadsheets/d/1G78H6bDAtcs-wEFN4yDRW7vzAtdtiz-2-g3BFeMW9zI/edit?usp=drivesdk" target="_blank">Freehand English Writting</a></div>
                         <div><a class="button" href="https://10fastfingers.com/typing-test/bengali" target="_blank">Bengali Typing-Test</a></div>
                         <div><a class="button" href="https://10fastfingers.com/typing-test/english" target="_blank">English Typing-Test</a></div>
                         <div><a class="button" href="https://github.com/ArafatTheMaster" target="_blank">Manage Website</a></div>
@@ -1251,6 +1252,7 @@ function openMovieBox() {
 
 </body>
 </html>
+
 
 
 
